--- a/dashboard/src/components/style.css
+++ b/dashboard/src/components/style.css
@@ -1,12 +1,10 @@
-body{
-    display: flex;
-    justify-content: center;
-
-}
-.container{
+.form-container{
     width: 350px;
     background-color: rgb(221, 90, 151);
     border-radius: 5px;
+    margin: auto;
+    margin-top: 30px;
+    
 }
 
 .sign-up form{
