--- a/dashboard/src/components/authentication/style.css
+++ b/dashboard/src/components/authentication/style.css
@@ -1,9 +1,13 @@
 .form-container{
     width: 350px;
-    background-color: rgb(221, 90, 151);
     border-radius: 5px;
     margin: auto;
     margin-top: 30px;
+    background-image: url('../../assets/budget.JPG');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    color: #d41484;
     
 }
 
